# short-story-gen-cli

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  CHANGELOG.md  EDITORIAL_WORKFLOW_SPEC.md  GROK_GUIDE.md  LICENSE  QUICKSTART.md  README.md  REFACTOR_BASEGENERATOR.md  TESTING.md  TODO.md  WEB_SERVICE_READINESS.md  apply_revisions.py  check_epub.py  comprehensive_test.json  continuity_test.json  editorial_feedback.json  editorial_feedback_comprehensive_20251114_191400.json  editorial_feedback_real.json  iterative_story_20251113_111249.json  iterative_story_20251113_111633.json  iterative_story_20251113_112047.json  necromancer_breakdown.json  necromancer_characters.json  necromancer_duel.json  necromancer_locations.json  necromancer_outline.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  style_test.json  test_characters.json  test_comprehensive_breaks.py  test_content_format.py  test_epub_fix.py  test_epub_issue.py  (+11 more)
.github/workflows/: ci.yml
data/editorial/jobs/jobs/: 043f681c-f258-4bd6-b338-3eac7f36e66f.json  043f681c-f258-4bd6-b338-3eac7f36e66f_result.json  0f7849e5-fe78-458c-8771-b6f0479bc3c9.json  29d6c52f-46ce-4a31-8057-c6ea455e8457.json  29d6c52f-46ce-4a31-8057-c6ea455e8457_result.json  3a60463f-8803-4d15-bef2-55c21c2fdbf3.json  3a60463f-8803-4d15-bef2-55c21c2fdbf3_result.json  63bc0583-4d7a-4162-8e0c-9a02374e0717.json  63bc0583-4d7a-4162-8e0c-9a02374e0717_result.json  86dc4ba5-8cca-48b2-97f8-e131a5efdbbe.json  86dc4ba5-8cca-48b2-97f8-e131a5efdbbe_result.json  b2dcd0b5-0892-4ada-b7cb-1d799c2cbfb3.json  b2dcd0b5-0892-4ada-b7cb-1d799c2cbfb3_result.json  ebf83083-316c-4a0e-9505-444bc23f4b70.json  ebf83083-316c-4a0e-9505-444bc23f4b70_result.json
docs/: ARCHITECTURE_REVIEW.md  GUI_TODO.md  README.md  TODO.md  editorial-implementation.md  editorial-integration-guide.md  editorial-mvp-roadmap.md  editorial-workflow.md  grok-guide.md  iterative-generation.md  migrations.md  project-workflow.md  quickstart-guide.md
docs/archive/: PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  REFACTOR_CLI.md
examples/: fichtean_outline.json  hero_journey_outline.json  test_breakdown.json  test_idea.json  test_prose.json
src/config/: editorial_config.yaml
src/storygen/: cli.py  epub.py  generator.py  generator.py.backup  models.py  parsing.py  prompt_builder.py
src/storygen/editorial/: __init__.py  base.py
src/storygen/editorial/cli/: __init__.py  commands.py
src/storygen/editorial/core/: __init__.py  config.py  job_manager.py  model_manager.py
src/storygen/editorial/editors/: __init__.py  comprehensive.py  continuity.py  structural.py  style.py
src/storygen/editorial/utils/: __init__.py
src/storygen/iterative/: __init__.py  cli.py  cli.py.old  constants.py  exceptions.py  models.py  outline_templates.py  project.py
src/storygen/iterative/cli/: __init__.py  main.py
src/storygen/iterative/cli/commands/: export.py  generate.py  pipeline.py  project.py  prose.py  utils.py
src/storygen/iterative/formatters/: __init__.py  epub.py
src/storygen/iterative/generators/: __init__.py  base.py  breakdown.py  character.py  idea.py  location.py  outline.py  prose.py  title.py
src/storygen/iterative/models/: __init__.py  characters.py  feedback.py  locations.py  project.py  story.py  structure.py
tests/: test_cli.py  test_epub_layout.py  test_models.py  test_parsing.py  test_story_generator.py
tests/editorial/: test_cli_commands.py  test_core.py  test_integration.py
tests/integration/: README.md  __init__.py  conftest.py  test_full_pipeline.py  test_idea_generator_ollama.py  test_outline_generator_xai.py  test_outline_generator_xai.py.backup
tests/unit/: test_breakdown_generator.py  test_chapter_decider.py  test_character_generator.py  test_cli_modules.py  test_epub_components.py  test_epub_validation.py  test_idea_generator.py  test_location_generator.py  test_models.py  test_outline_generator.py  test_outline_templates.py
